# tev

./: .appveyor.yml  .clang-format  .clangd  .editorconfig  .envrc  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CMakeLists.txt  LICENSE  LICENSE.md  LICENSE.txt  README.md  flake.nix  package.nix
.github/workflows/: bundle-sources.yml  main.yml
dependencies/: CMakeLists.txt
include/: Channel.h  CheckerboardShader.h  Common.h  GammaShader.h  GlTexture.h  HelpWindow.h  Image.h  ImageButton.h  ImageCanvas.h  ImageViewer.h  Macros.h  SharedQueue.h  ThreadPool.h  UberShader.h
include/tev/: BackgroundImagesLoader.h  Box.h  Channel.h  Common.h  ErrorDialog.h  FalseColor.h  FileDialog.h  GlTexture.h  HelpWindow.h  Image.h  ImageButton.h  ImageCanvas.h  ImageInfoWindow.h  ImageViewer.h  Ipc.h  Lazy.h  MultiGraph.h  PriorityQueue.h  SharedQueue.h  SplitscreenSlider.h  Task.h  ThreadPool.h  UberShader.h  VectorGraphics.h  WaylandClipboard.h
include/tev/imageio/: AppleMakerNote.h  BmpImageLoader.h  Chroma.h  ClipboardImageLoader.h  Colors.h  DdsImageLoader.h  Demosaic.h  DicomImageLoader.h  EmptyImageLoader.h  Exif.h  ExrImageLoader.h  ExrImageSaver.h  FitsImageLoader.h  GainMap.h  HeifImageLoader.h  IcoImageLoader.h  Ifd.h  ImageLoader.h  ImageSaver.h  IsoGainMapMetadata.h  Jpeg2000ImageLoader.h  JpegTurboImageLoader.h  JpegTurboImageSaver.h  JxlImageLoader.h  JxlImageSaver.h  JxrImageLoader.h  PfmImageLoader.h  PngImageLoader.h  PngImageSaver.h  QoiImageLoader.h  QoiImageSaver.h  RawImageLoader.h  StbiHdrImageSaver.h  StbiImageLoader.h  StbiLdrImageSaver.h  TiffImageLoader.h  UltraHdrImageLoader.h  WebpImageLoader.h  Xmp.h
resources/: Info.plist  icon.icns  tev.desktop  tev.yaml
resources/icons/: icon.rc
resources/linux/: tev.desktop  tev.metainfo.xml.in
resources/macos/: Info.plist  icon.icns
resources/windows/: icon.rc  patch.wxs  tev.manifest  winget.yaml
scripts/: configure-winget.cmake  create-appimage.cmake  create-dmg-backwards.sh  create-dmg-mojave.sh  create-dmg.sh  create-exe-ninja.bat  create-exe.bat  mac-post-install.cmake  mac-run-tev.sh  osx-post-install.cmake  osx-run-tev.sh  parse-include-paths.py  pull.sh  sample-colormap.py  turbo_colormap.py  update-submodules.sh
src/: BackgroundImagesLoader.cpp  Box.cpp  Channel.cpp  CheckerboardShader.cpp  Common.cpp  ErrorDialog.cpp  FalseColor.cpp  FileDialog.cpp  GammaShader.cpp  GlTexture.cpp  HelpWindow.cpp  Image.cpp  ImageButton.cpp  ImageCanvas.cpp  ImageInfoWindow.cpp  ImageViewer.cpp  Ipc.cpp  Lazy.cpp  Macros.cpp  MultiGraph.cpp  PriorityQueue.cpp  SharedQueue.cpp  SplitscreenSlider.cpp  Task.cpp  ThreadPool.cpp  UberShader.cpp  VectorGraphics.cpp  WaylandClipboard.cpp  main.cpp
src/imageio/: AppleMakerNote.cpp  BmpImageLoader.cpp  Chroma.cpp  ClipboardImageLoader.cpp  Colors.cpp  DdsImageLoader.cpp  Demosaic.cpp  DicomImageLoader.cpp  EmptyImageLoader.cpp  Exif.cpp  ExrImageLoader.cpp  ExrImageSaver.cpp  FitsImageLoader.cpp  GainMap.cpp  HeifImageLoader.cpp  IcoImageLoader.cpp  Ifd.cpp  ImageLoader.cpp  ImageSaver.cpp  IsoGainMapMetadata.cpp  Jpeg2000ImageLoader.cpp  JpegTurboImageLoader.cpp  JpegTurboImageSaver.cpp  JxlImageLoader.cpp  JxlImageSaver.cpp  JxrImageLoader.cpp  PfmImageLoader.cpp  PngImageLoader.cpp  PngImageSaver.cpp  QoiImageLoader.cpp  QoiImageSaver.cpp  QoiImplementation.c  RawImageLoader.cpp  StbiHdrImageSaver.cpp  StbiImageLoader.cpp  StbiLdrImageSaver.cpp  TiffImageLoader.cpp  UltraHdrImageLoader.cpp  WebpImageLoader.cpp  Xmp.cpp
src/python/: ipc-example.py  ipc.py  tev.py
